--- a/ammarit/it/templates/user.html
+++ b/ammarit/it/templates/user.html
@@ -16,30 +16,13 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <script src="{% static 'js/main.js' %}"></script>
   </head>
 
   <body>
     <div class="container">
       <div class='row'>
-        <div class='jumbotron'>
-          <input type='text' placeholder='Employee ID' id='employeeid'/>
-          <div id='employeeiderror' class='errortext'></div>
-        </div>
-      </div>
-      <div class='row'>
-        {% for cat, list in items %}
-          <div class ='well'>
-            {{cat}}
-            {% for i in list %}
-            <div class='well-sm'>
-              <button class='item' onclick="onSelectItem({{i.itemNumber}}, {{i.itemID}});">{{i.make}} {{i.model}}</button>
-            </div>
-            {% endfor %}
-          </div>
-        {% endfor %}
+        {{user}}
       </div>
     </div>
   </body>
