--- a/ammarit/it/templates/admin.html
+++ b/ammarit/it/templates/admin.html
@@ -22,11 +22,34 @@
   </head>
 
   <body>
-    <div class="container">
-      <div class='row'>
-        <a href="{% url 'reqview' %}"> View Requests </a>
-        <a href="{% url 'employeeview' %}">Employees</a>
-      </div>
-    </div>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/it/">ITNAME</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="{{active_requests}}"><a href="{% url 'reqview' %}">Requests</a></li>
+            <li class="{{active_employees}}"><a href="{% url 'employeeview' %}">Employees</a></li>
+            <li class="{{active_inventory}}"><a href="{% url 'inventoryview' %}">Inventory</a></li>
+          </ul>
+          <form class="navbar-form navbar-right">
+            <button type="submit" class="btn btn-default" onclick="logout()">Logout</button>
+          </form>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
+    {% block admincontent %}
+    {% endblock %}
   </body>
 </html>
