--- a/ammarit/it/templates/index.html
+++ b/ammarit/it/templates/index.html
@@ -22,6 +22,31 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+          </button>
+          <a class="navbar-brand" href="/it/">ITNAME</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <div class="navbar-form navbar-right">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Username" id="username">
+              <input type="password" class="form-control" placeholder="Password" id="password">
+            </div>
+            <button class="btn btn-default" onclick="login()">Log in</button>
+          </div>
+          <div class="errortext navbar-form navbar-right" id="loginerror">
+          </div>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
     <div class="container">
       <div class='row'>
         <div class='jumbotron'>
