--- a/ammarit/it/static/css/main.css
+++ b/ammarit/it/static/css/main.css
@@ -6,3 +6,23 @@
 .errortext {
   color: red;
 }
+
+.lineseparator {
+  height: 1px;
+  width: 300px;
+  margin-bottom: 10px;
+  margin-top: -5px;
+  background: black; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(right,rgba(0,0,0,0),rgba(0,0,0,1)); /*Safari 5.1-6*/
+  background: -o-linear-gradient(left,rgba(0,0,0,0),rgba(0,0,0,1)); /*Opera 11.1-12*/
+  background: -moz-linear-gradient(left,rgba(0,0,0,0),rgba(0,0,0,1)); /*Fx 3.6-15*/
+  background: linear-gradient(to left, rgba(0,0,0,0), rgba(0,0,0,1)); /*Standard*/
+}
+
+.reqimg {
+  margin-left: auto;
+  margin-right: auto;
+  height: 200px;
+  max-height: 200px;
+  min-height: 200px;
+}
