--- a/ammarit/it/templates/index.html
+++ b/ammarit/it/templates/index.html
@@ -48,6 +48,8 @@
     </nav>
 
     <div class="container">
+      <h1>Item Request Form</h1>
+      <br/>
       <div class='row'>
         <input id="searchtext" class='form-control' type="text" placeholder="Search..." oninput="update_search()"></input>
       </div>
@@ -60,7 +62,7 @@
         {% for cat, list in items %}
           <div class='row' id="list-{{cat}}">
             <h2>
-              <a href="#" onclick="toggleCat('{{cat}}');"><span id="icon-{{cat}}" class="glyphicon glyphicon-minus" aria-hidden="true"></span> {{cat}}</a>
+              <a href="#" onclick="return toggleCat('{{cat}}');"><span id="icon-{{cat}}" class="glyphicon glyphicon-minus" aria-hidden="true"></span> {{cat}}</a>
             </h2>
             <div id="container-{{cat}}">
               {% for i in list %}
@@ -70,7 +72,7 @@
                     <div class="caption">
                       <h3>{{i.make}} {{i.model}}</h3>
                       <p>{{i.description}}</p>
-                      <p><a class="btn btn-primary" role="button" onclick=onclick="onSelectItem({{i.itemNumber}}, {{i.itemID}});">Add to request</a></p>
+                      <p><a class="btn btn-primary" role="button" onclick="onAddItem({{i.itemNumber}}, {{i.itemID}}, '{{i.make}} {{i.model}}');">Add to request</a></p>
                     </div>
                   </div>
                 </div>
@@ -81,7 +83,16 @@
       </div>
       <div class='row'>
         <div class='jumbotron'>
-          <input type='text' placeholder='Employee ID' id='employeeid'/>
+          <h1>Request</h1>
+          <br/>
+          <div id='request-summary'>
+          </div>
+          <div class='input-group'>
+            <input class='form-control' type='text' placeholder='Employee ID' id='employeeid'/>
+            <span class="input-group-btn">
+              <button class="btn btn-default" type="button" onclick="onMakeRequest()">Make Request</button>
+            </span>
+          </div>
           <div id='employeeiderror' class='errortext'></div>
         </div>
       </div>
