--- a/ammarit/it/templates/index.html
+++ b/ammarit/it/templates/index.html
@@ -62,13 +62,13 @@
         {% for cat, list in items %}
           <div class='row' id="list-{{cat}}">
             <h2>
-              <a href="#" onclick="return toggleCat('{{cat}}');"><span id="icon-{{cat}}" class="glyphicon glyphicon-minus" aria-hidden="true"></span> {{cat}}</a>
+              <a href="#" onclick="return toggleCat('{{cat}}');"><span id="icon-{{cat}}" class="glyphicon glyphicon-plus" aria-hidden="true"></span> {{cat}}</a>
             </h2>
-            <div id="container-{{cat}}">
+            <div id="container-{{cat}}" style="display: none;">
               {% for i in list %}
                 <div class="col-sm-6 col-md-4 availableitem">
                   <div class="thumbnail">
-                    <img class="reqimg" src="{{i.imgURL}}" alt="">
+                    <img class="reqimg" src="{{i.imgURL}}" onerror="this.src='{% static 'images/placeholder.png' %}'">
                     <div class="caption">
                       <h3>{{i.make}} {{i.model}}</h3>
                       <p>{{i.description}}</p>
@@ -81,12 +81,14 @@
           </div>
         {% endfor %}
       </div>
+      <br/>
       <div class='row'>
         <div class='jumbotron'>
           <h1>Request</h1>
           <br/>
           <div id='request-summary'>
           </div>
+          <br/>
           <div class='input-group'>
             <input class='form-control' type='text' placeholder='Employee ID' id='employeeid'/>
             <span class="input-group-btn">
