--- a/ammarit/it/templates/user.html
+++ b/ammarit/it/templates/user.html
@@ -1,29 +1,72 @@
+{% extends 'admin.html' %}
 {% load staticfiles %}
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>IT</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+{% block admincontent %}
+  <div class="modal fade" id="confirm-modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">Are you sure?</h4>
+        </div>
+        <div class="modal-body">
+          <p>This will permanently delete the item from the inventory system.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+          <button id="modal-button" type="button" class="btn btn-danger">Delete</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
 
-    <!-- JQuery -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="{% static 'js/jquery.cookie.js' %}"></script>
-    <script src="{% static 'js/jquery.color.js' %}"></script>
+  <div class="modal fade" id="delete-modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">Are you sure?</h4>
+        </div>
+        <div class="modal-body">
+          <p>This will permanently delete the user from the system.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+          <button id="modal-button" type="button" class="btn btn-danger" onclick="delete_user({{user.user.id}});">Delete</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-
-    <script src="{% static 'js/main.js' %}"></script>
-  </head>
-
-  <body>
-    <div class="container">
-      <div class='row'>
-        {{user}}
+  <div class="container">
+    <div class='row'>
+      <div class="jumbotron">
+        <div class="row">
+          <div class="col col-md-4">
+            <img class="reqimg" src="{{user.imgURL}}" onerror="this.src='{% static 'images/placeholder.png' %}'">
+          </div>
+          <div>
+            <h2>{{user}}'s inventory</h2>
+            <button class="btn btn-danger" type="button" data-toggle="modal" data-target="#delete-modal">Delete account</button>
+          </div>
+        </div>
       </div>
+      <br/>
+      {% for it, itcount in items %}
+        <div class="col-sm-6 col-md-4 reqitem">
+          <div class="thumbnail">
+            <img class="reqimg" src="{{it.imgURL}}" onerror="this.src='{% static 'images/placeholder.png' %}'">
+            <div class="caption">
+              <h3>({{itcount}}) {{it}}</h3>
+              <br/>
+              <p>
+                <a class="btn btn-primary" role="button" onclick="on_return({{it.itemID}}, {{it.itemNumber}});">Return</a>
+                <button class="btn btn-danger" type="button" data-toggle="modal" data-target="#confirm-modal" onclick="$('#modal-button').click(function() {on_lost({{it.itemID}}, {{it.itemNumber}})});">Lost</button>
+              </p>
+            </div>
+          </div>
+        </div>
+      {% endfor %}
     </div>
-  </body>
-</html>
+  </div>
+{% endblock %}
