--- a/ammarit/it/templates/admin.html
+++ b/ammarit/it/templates/admin.html
@@ -31,6 +31,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/it/">ITNAME</a>
         </div>
@@ -47,6 +48,7 @@
             </a></li>
             <li class="{{active_employees}}"><a href="{% url 'employeeview' %}">Employees</a></li>
             <li class="{{active_inventory}}"><a href="{% url 'inventoryview' %}">Inventory</a></li>
+            <li class="{{active_additem}}"><a href="{% url 'additemview' %}">Add Item</a></li>
           </ul>
           <form class="navbar-form navbar-right">
             <button type="submit" class="btn btn-default" onclick="logout()">Logout</button>
