--- a/ammarit/it/templates/index.html
+++ b/ammarit/it/templates/index.html
@@ -72,7 +72,7 @@
                     <div class="caption">
                       <h3>{{i.make}} {{i.model}}</h3>
                       <p>{{i.description}}</p>
-                      <p><a class="btn btn-primary" role="button" onclick="onAddItem({{i.itemNumber}}, {{i.itemID}}, '{{i.make}} {{i.model}}');">Add to request</a></p>
+                      <p><a class="btn btn-primary" role="button" onclick="onAddItem({{i.itemNumber}}, '{{i.make}} {{i.model}}');">Add to request</a></p>
                     </div>
                   </div>
                 </div>
@@ -88,6 +88,8 @@
           <br/>
           <div id='request-summary'>
           </div>
+          <br/>
+          <textarea id="request-desc" class="form-control" type="text" rows="4" placeholder="Request description"></textarea>
           <br/>
           <div class='input-group'>
             <input class='form-control' type='text' placeholder='Employee ID' id='employeeid'/>
