--- a/ammarit/it/templates/inventory.html
+++ b/ammarit/it/templates/inventory.html
@@ -26,7 +26,7 @@
                   <div class="thumbnail">
                     <img class="reqimg" src="{{it.imgURL}}" onerror="this.src='{% static 'images/placeholder.png' %}'">
                     <div class="caption">
-                      <h3>({{count}}) {{it}}</h3>
+                      <h3>({{count}}) {{it}} [{{it.itemNumber}}]</h3>
                       <p></p>
                       <p>
                       </p>
