--- a/ammarit/it/templates/reqview.html
+++ b/ammarit/it/templates/reqview.html
@@ -5,20 +5,25 @@
   <div class="container">
     <div class='row'>
       {% if num_requests > 0 %}
-      {% for r in requests %}
-        <div class="col-sm-6 col-md-4 reqitem">
-          <div class="thumbnail">
-            <img class="reqimg" src="{{r.item.imgURL}}" onerror="this.src='{% static 'images/placeholder.png' %}'">
-            <div class="caption">
-              <h3><a href="{% url 'user' r.requester.user.id %}/">{{r.requester.FName}} {{r.requester.LName}}</a></h3>
-              <p>requested {{r.item}}</p>
-              <p>
-                <a class="btn btn-primary" role="button" onclick="accept_req({{r.id}});">Accept</a>
-                <a class="btn btn-danger" role="button" onclick="reject_req({{r.id}});">Reject</a>
-              </p>
+      {% for r, items in requests %}
+        <h3><a href="{% url 'user' r.requester.user.id %}/">{{r.requester.FName}} {{r.requester.LName}}</a> requested</h3>
+        <p>{{r.desc}}</p>
+        {% for it, ri in items %}
+          <div class="col-sm-6 col-md-4 reqitem">
+            <div class="thumbnail">
+              <img class="reqimg" src="{{it.imgURL}}" onerror="this.src='{% static 'images/placeholder.png' %}'">
+              <div class="caption">
+                <p>
+                  <h4>{{it}}</h4>
+                  <textarea id="request-response-{{ri.id}}" class="form-control" type="text" rows="2" placeholder="Request response"></textarea>
+                  <br/>
+                  <a class="btn btn-primary" role="button" onclick="accept_req({{ri.id}});">Accept</a>
+                  <a class="btn btn-danger" role="button" onclick="reject_req({{ri.id}});">Reject</a>
+                </p>
+              </div>
             </div>
           </div>
-        </div>
+        {% endfor %}
       {% endfor %}
       {% else %}
         <div class="jumbotron">
