--- a/ammarit/it/templates/additem.html
+++ b/ammarit/it/templates/additem.html
@@ -4,7 +4,7 @@
 {% block admincontent %}
   <div class="container">
     <div class="row">
-      <ul class="nav nav-pills nav-justified">
+      <ul class="nav nav-tabs nav-justified">
         <li role="presentation" id="newitemtab" class="active"><a href="#" onclick="on_new_item();">New Item</a></li>
         <li role="presentation" id="restocktab"><a href="#" onclick="on_restock();">Restock</a></li>
       </ul>
