--- a/ammarit/it/templates/admin.html
+++ b/ammarit/it/templates/admin.html
@@ -32,6 +32,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/it/">ITNAME</a>
         </div>
@@ -41,7 +42,7 @@
           <ul class="nav navbar-nav">
             <li class="{{active_requests}}"><a href="{% url 'reqview' %}">
               {% if num_requests > 0 %}
-              Requests <span class="badge">{{num_requests}}</span>
+              Requests  <span class="badge progress-bar-danger">{{num_requests}}</span>
               {% else %}
               Requests
               {% endif %}
@@ -49,6 +50,7 @@
             <li class="{{active_employees}}"><a href="{% url 'employeeview' %}">Employees</a></li>
             <li class="{{active_inventory}}"><a href="{% url 'inventoryview' %}">Inventory</a></li>
             <li class="{{active_additem}}"><a href="{% url 'additemview' %}">Add Item</a></li>
+            <li class="{{active_log}}"><a href="{% url 'log' %}">Log</a></li>
           </ul>
           <form class="navbar-form navbar-right">
             <button type="submit" class="btn btn-default" onclick="logout()">Logout</button>
