--- a/ammarit/it/templates/inventory.html
+++ b/ammarit/it/templates/inventory.html
@@ -26,8 +26,8 @@
                   <div class="thumbnail">
                     <img class="reqimg" src="{{it.imgURL}}" onerror="this.src='{% static 'images/placeholder.png' %}'">
                     <div class="caption">
-                      <h3>({{count}}) {{it}} [{{it.itemNumber}}]</h3>
-                      <p></p>
+                      <h3><span class="label label-default">{{it.itemNumber}}</span> {{it}}</h3>
+                      <p style="color:green;">In stock: {{count}}</p>
                       <p>
                       </p>
                     </div>
